--- a/index.html
+++ b/index.html
@@ -59,8 +59,11 @@
         
         <section id="Culinária">
             <h2>Culinária</h2>
-            
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad accusamus similique perferendis error molestiae porro, doloremque officia voluptatum est? Minus minima sed omnis amet culpa enim quis incidunt soluta perferendis.</p>
+            <div id="soon">
+                <p><strong>
+                   EM ANDAMENTO....
+                </strong></p>
+            </div>
         </section>
         <section id="Lojas">
             <h2>Lojas</h2>
@@ -72,7 +75,11 @@
         </section>
         <section id="Parcerias">
             <h2>Parcerias</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis repellat magni esse quibusdam officia placeat commodi totam eos dolor nihil quis est accusantium, ullam unde facilis ut, voluptas architecto et!</p>
+            <div id="soon">
+                <p><strong>
+                   EM ANDAMENTO....
+                </strong></p>
+            </div>
         </section>
 
     </main>
