posicionamento das imagens
Agora com um pouco de conhecimento sobre a propriedade position, usei juntos com id, não sei se seria assim que usa mas.. tá indo da forma que veio na cabeça

--- a/index.html
+++ b/index.html
@@ -24,37 +24,37 @@
             <H2>Viajem</H2>
 
                 <picture>
-                    <img src="css/imagens/Planice-tb.jpg" alt="" class="quadro">
+                    <img src="css/imagens/Planice-tb.jpg" alt="" class="quadro" id="cidade">
                 </picture>
-            <div class="descrição" >    
+            <div class="descrição" id="planice">    
              <p >
                 <strong>Planice da cidade estado</strong>: Fica no territorio da cidade mas um pouco afastado da capital, um otimo lugar para treinos de magia, de combate ou um belo piquinique
              </p>
-            </div>
 
+            </div>
                 <picture>
-                    <img src="css/imagens/Povo-de-gonullu-tb.jpg" alt="Paisagem do Povo de gonullu" class="quadro">
+                    <img src="css/imagens/Povo-de-gonullu-tb.jpg" alt="Paisagem do Povo de gonullu" class="quadro" id="povo">
                 </picture>
 
-                <div class="descrição">
+                <div class="descrição" id="gonullu">
                     <p>
                      <strong>cidade dos Gonullu</strong>: Um pessoal meio frios porém muito hospitaleiros e educados, se tiver precisando de ajuda bem próvavel que els vão, a não ser que pise no calo deles.
                     </p>
                 </div>
 
                 <picture>
-                    <img src="css/imagens/pico-arcanojpg.jpg" alt="um lugar com grande carga arcana" class="quadro">
-                    <div class="descrição">
+                    <img src="css/imagens/pico-arcanojpg.jpg" alt="um lugar com grande carga arcana" class="quadro" id="pico">
+                    <div class="descrição" id="arcano">
                 </picture>
                     <p><strong >Pico arcano</strong>: só fica carregado de energia magica na noite do  solticio de verão, localizado ao sul de uma cidade no meio, uma criatura com boa percepção arcana irar indentifica-lo facil... </p>
                 </div>
                 
-                <!--<picture>
-                    <img src="css/imagens/oasis-das-sandsrun.jpg" alt="um belo Oásis" class="quadro">
+                <picture>
+                    <img src="css/imagens/oasis-das-sandsrun.jpg" alt="um belo Oásis" class="quadro" id="oasis">
                 </picture>
-                    <div class="descriçao">
-                        <p>Oasis das sandsrun: um local muito gostoso de se passa o tempo, otima comida, boa estadia e um dos lugar que me inspirou a criar essa magica de comunicação</p>
-                </div>-->
+                    <div class="descrição" id="sand">
+                        <p><strong>Oasis das sandsrun</strong>: um local muito gostoso de se passa o tempo, otima comida, boa estadia e um dos lugar que me inspirou a criar essa magica de comunicação</p>
+                </div>
         </section >
         
         <section id="Culinária">
